Initial work starting

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "aws-sdk": "^2.112.0"
+    "aws-sdk": "^2.112.0",
+    "aws4": "^1.6.0"
   },
   "devDependencies": {},
   "scripts": {
