adding database functions

--- a/config.json
+++ b/config.json
@@ -1,2 +1,2 @@
-{ "accessKeyId": "accessKey1", "secretAccessKey": "verySecretKey1", "region": "us-east-1" }
+{ "accessKeyId": "accessKey1", "secretAccessKey": "verySecretKey1" }
 
