--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.112.0",
-    "aws4": "^1.6.0"
+    "aws4": "^1.6.0",
+    "body-parser": "^1.18.1",
+    "express": "^4.15.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.12.1"
+  },
   "scripts": {
-    "start": "node data.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
