--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "express": "^4.15.4"
   },
   "devDependencies": {
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
     "nodemon": "^1.12.1"
   },
   "scripts": {
