--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "airbnb"
+  "extends": "airbnb",
+  "rules": {
+    "no-param-reassign": 0,
+    "no-mixed-operators": 0,
+    "no-console": 0
+  }
 }
